kubernetes/ansible/roles/proxy/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: dev
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - dev.centralindia.cloudapp.azure.com
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ingress-cert # must be the same as secret
    hosts:
    - dev.centralindia.cloudapp.azure.com
